--- a/02HTML/index.html
+++ b/02HTML/index.html
@@ -11,7 +11,9 @@
     <br>
     <h2>Lentos</h2>
     <br>
-    <h3>Muevanlass</h3>
+    <p>Wiiiii se actualizo</p>
+    <br>
+    <a href="index.html">Regresar a principal</a>
     
 </body>
 </html>
